xml/src1/objects/Address__c.object
<CustomObject>
    <description>Address of the contacts</description>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <description>Street address of the contacts</description>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line2__c</fullName>
        <description>Address Line 2</description>
        <inlineHelpText>Enter campus boxes, apartment numbers, and other secondary address data here to simplify Address Line 1.</inlineHelpText>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <description>Alternate Phone other than the Landline</description>
        <inlineHelpText>Enter valid secondary phone number here, if applicable.</inlineHelpText>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Address : City</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidential_Mailing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Mailing address that should be used for confidentiality.</description>
        <inlineHelpText>Select if postal address is OCAS-related or is contact&apos;s desired address to receive confidential mailings</inlineHelpText>
        <label>Confidential Mailing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master Detail : Addresses of the Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Address</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>UNITED STATES OF AMERICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERICAN SAMOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA &amp; BARBUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA AND HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTSWANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZIL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Confidential_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the Email should be used for the Confidentiality</description>
        <inlineHelpText>Select if address is OCAS-related or is contact&apos;s desired location to receive confidential email</inlineHelpText>
        <label>Email Confidential Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email of the Contact</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date of the address</description>
        <inlineHelpText>Enter date only when address is known to be incorrect or &apos;outdated&apos;</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_Address_ID__c</fullName>
        <description>GBHEM DataCenter address Id: Migration Only for Historic Data.</description>
        <label>GBHEM_DataCenter_Address_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_Create_Date__c</fullName>
        <description>GBHEM Data center Address Create Date.Historical/read Only</description>
        <label>GBHEM_DataCenter_Create Date</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_EntityID__c</fullName>
        <description>For the contacts and Organization</description>
        <label>GBHEM_DataCenter_EntityID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_Entity_Type__c</fullName>
        <label>GBHEM DataCenter Entity Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_ModifiedUser__c</fullName>
        <description>GBHEM Data Center Address Modified User.Historical/Read Only</description>
        <label>GBHEM_DataCenter_ModifiedUser</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_Modified_Date__c</fullName>
        <description>GBHEM Data Center Address Modified Date.Historical/read Only</description>
        <label>GBHEM_DataCenter_Modified Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBHEM_Data_Center_Address_Type__c</fullName>
        <description>GBHEM Data Center Address type : To retain the value of the address type in the Data center.</description>
        <label>GBHEM Data Center Address Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBHEm_DataCenter_Country_Code__c</fullName>
        <description>GBHEM Data center country code,It is made Historical read only field.Cause they have 3 letters words before.Now Country code is Full Name with Capital Letters.</description>
        <label>GBHEm_DataCenter_Country_Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Switchboard__c</fullName>
        <inlineHelpText>Enter main phone number on file for the organization here.</inlineHelpText>
        <label>Main/Switchboard</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Migration_Key__c</fullName>
        <inlineHelpText>RDS Staff Reference only</inlineHelpText>
        <label>Migration Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If an Organization exists,elect it here.  Otherwise, enter the name in the Address Name text field.</description>
        <label>Organization Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Address</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <description>Phone Extension</description>
        <label>Landline Extension</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone of the Contact</description>
        <label>Landline</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Email_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Primarary address of the Contact</description>
        <label>Primary Email Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Mailing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Primary Mailing address of the contact</description>
        <inlineHelpText>Select one address to send postal mail</inlineHelpText>
        <label>Primary Mailing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date of the Address</description>
        <inlineHelpText>Date that contact will begin residing at this address</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Other__c</fullName>
        <inlineHelpText>Enter non-US state name here when &apos;Other/Specify&apos; is selected</inlineHelpText>
        <label>State Other</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>States in USA &amp; Canada</description>
        <label>State/Province</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Address Type</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>URL of the person web address,or the Person company address</description>
        <inlineHelpText>Enter only personal website address for this contact</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Address-{00000000}</displayFormat>
        <label>Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address</pluralLabel>
    <recordTypes>
        <fullName>Home_Address</fullName>
        <active>true</active>
        <description>Address where contact resides</description>
        <label>Contact  Home Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Military_Address</fullName>
        <active>true</active>
        <description>Address for contacts in the military</description>
        <label>Contact Military Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization_Location</fullName>
        <active>true</active>
        <description>Address for organization’s physical location</description>
        <label>Organization Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization_Mailing</fullName>
        <active>true</active>
        <description>Address where organization receives postal mail</description>
        <label>Organization Mailing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Address</fullName>
        <active>true</active>
        <description>Address type other than those listed e.g. P.O. Box</description>
        <label>Contact Other Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>School_Address</fullName>
        <active>true</active>
        <description>Address for contacts while residing at school</description>
        <label>Contact School Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Temporary_Address</fullName>
        <active>true</active>
        <description>Address for contacts that is a non-permanent address</description>
        <label>Contact Temporary Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Work_Address</fullName>
        <active>true</active>
        <description>Address for contact’s employer</description>
        <label>Contact Work Address</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AddressStartDateEndDate</fullName>
        <active>true</active>
        <description>End Date must be greater than or equal to the Start Date.</description>
        <errorConditionFormula>IF (NOT (ISNULL(End_Date__c)), Start_Date__c  &gt;=  End_Date__c,FALSE)</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>&apos;Start Date postdates &apos;End Date&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AlternatePhone_format</fullName>
        <active>true</active>
        <description>Alternate Phone should be Number and in format</description>
        <errorConditionFormula>AND ( NOT( ISPICKVAL( Country__c , &quot;Brazil&quot;)) ,
NOT (
OR ( LEN ( Alternate_Phone__c) = 0,
REGEX( Alternate_Phone__c,&quot;[0-9]{10}&quot;),
REGEX(Alternate_Phone__c, &quot;\\D*?(\\d\\D*?){10}&quot;)
)
)
)</errorConditionFormula>
        <errorDisplayField>Alternate_Phone__c</errorDisplayField>
        <errorMessage>Alternate Phone should be in format (999)999-9999 and should be only Numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fax_Format</fullName>
        <active>true</active>
        <description>Fax only Number and in a format</description>
        <errorConditionFormula>AND ( NOT( ISPICKVAL( Country__c , &quot;Brazil&quot;)) ,
NOT (
OR ( LEN ( Fax__c) = 0,
REGEX( Fax__c,&quot;[0-9]{10}&quot;),
REGEX(Fax__c, &quot;\\D*?(\\d\\D*?){10}&quot;)
)
)
)</errorConditionFormula>
        <errorDisplayField>Fax__c</errorDisplayField>
        <errorMessage>Fax should be in format (999)999-9999 and should be only Numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MainSwitchboard_Format</fullName>
        <active>true</active>
        <description>Main Switch Board Format and should be only Numbers</description>
        <errorConditionFormula>AND ( NOT( ISPICKVAL( Country__c , &quot;Brazil&quot;)) ,
NOT (
OR ( LEN ( Main_Switchboard__c) = 0,
REGEX( Main_Switchboard__c,&quot;[0-9]{10}&quot;),
REGEX(Main_Switchboard__c, &quot;\\D*?(\\d\\D*?){10}&quot;)
)
)
)</errorConditionFormula>
        <errorDisplayField>Main_Switchboard__c</errorDisplayField>
        <errorMessage>Main Switchboard should be in format (999)999-9999 and should be only Numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_Phone_Format</fullName>
        <active>true</active>
        <description>Mobile_Phone only Number and Format</description>
        <errorConditionFormula>AND ( NOT( ISPICKVAL( Country__c , &quot;Brazil&quot;)) ,
NOT (
OR ( LEN ( Mobile__c ) = 0,
REGEX( Mobile__c ,&quot;[0-9]{10}&quot;),
REGEX(Mobile__c, &quot;\\D*?(\\d\\D*?){10}&quot;)
)
)
)</errorConditionFormula>
        <errorDisplayField>Mobile__c</errorDisplayField>
        <errorMessage>Mobile Phone Field should be in this format (999)999-9999 and should be only Numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_Phone_Format_Brazil</fullName>
        <active>true</active>
        <description>Mobile Phone format  and only Numbers</description>
        <errorConditionFormula>AND ( ISPICKVAL( Country__c , &quot;Brazil&quot;),
NOT (
OR ( LEN ( Mobile__c ) = 0,
REGEX( Mobile__c ,&quot;[0-9]{12}&quot;),
REGEX( Mobile__c, &quot;\\d{2}\\s\\d{4}-\\d{4}&quot;),
REGEX( Mobile__c, &quot;\\+55\\s\\d{2}\\s\\d{4}-\\d{4}&quot;)
)
)
)</errorConditionFormula>
        <errorDisplayField>Mobile__c</errorDisplayField>
        <errorMessage>Mobile Field should be in this format  +55 99 9999-9999  or 99 9999-9999 and should be only Numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Format_Brazil</fullName>
        <active>true</active>
        <description>Phone format for brazil</description>
        <errorConditionFormula>AND ( ISPICKVAL( Country__c , &quot;Brazil&quot;), 
NOT ( 
 OR ( LEN ( Main_Switchboard__c) = 0,
           REGEX( Main_Switchboard__c ,&quot;[0-9]{12}&quot;),
           REGEX( Main_Switchboard__c, &quot;\\d{2}\\s\\d{4}-\\d{4}&quot;), 
           REGEX( Main_Switchboard__c, &quot;\\+55\\s\\d{2}\\s\\d{4}-\\d{4}&quot;)
         )
     )
)</errorConditionFormula>
        <errorMessage>Phone Field should be in this format +55 (99)9999-9999 and should be only Numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Format_Number</fullName>
        <active>true</active>
        <description>Phone only Number Validation</description>
        <errorConditionFormula>AND ( NOT( ISPICKVAL( Country__c , &quot;Brazil&quot;)) ,
NOT (
OR ( LEN ( Phone__c ) = 0,
REGEX( Phone__c ,&quot;[0-9]{10}&quot;),
REGEX(Phone__c, &quot;\\D*?(\\d\\D*?){10}&quot;)
)
)
)</errorConditionFormula>
        <errorMessage>Phone Field should be in this format (999)999-9999 and should be only Numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_Other</fullName>
        <active>true</active>
        <description>If the &apos;State&apos; is &apos;Other.Then user should enter a value in the &apos;State_Other__c&apos;</description>
        <errorConditionFormula>AND( ISPICKVAL(   State__c   ,&quot;Other/Specify&quot;) , ISBLANK( State_Other__c ) )</errorConditionFormula>
        <errorDisplayField>State_Other__c</errorDisplayField>
        <errorMessage>&apos;State Other&apos; must contain a value when State is &apos;Other/Specify&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_Other_Disable</fullName>
        <active>true</active>
        <description>When State is not &apos;Other Specify&apos; .No value should be entered.</description>
        <errorConditionFormula>AND(NOT( ISPICKVAL( State__c  ,&quot;Other/Specify&quot;)) ,
NOT( ISBLANK(  State_Other__c  ) ))</errorConditionFormula>
        <errorDisplayField>State_Other__c</errorDisplayField>
        <errorMessage>&apos;State Other&apos; field must not contain a value when State is NOT &apos;Other/Specify&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ZipPostalCode_Number_Canada</fullName>
        <active>true</active>
        <description>Zip Postal code should be only Number and in format</description>
        <errorConditionFormula>AND(NOT( ISBLANK(Zip_Postal_Code__c) ) ,
OR(ISPICKVAL(Country__c, &apos;CANADA&apos;)),
NOT(REGEX( Zip_Postal_Code__c ,
&quot;((?i)[ABCEGHJKLMNPRSTVXY]\\d[A-Z]?\\s?\\d[A-Z]\\d)?&quot;)))</errorConditionFormula>
        <errorDisplayField>Zip_Postal_Code__c</errorDisplayField>
        <errorMessage>Please enter a valid Zip Postal code Format.Canadian postal code must be in A9A 9A9 format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ZipPostalCode_Number_USA</fullName>
        <active>true</active>
        <description>Zip Postal code should be only Number and in format</description>
        <errorConditionFormula>AND( NOT( ISBLANK(Zip_Postal_Code__c) ) ,
OR(ISPICKVAL(Country__c, &apos;UNITED STATES OF AMERICA&apos;)),
NOT(REGEX( Zip_Postal_Code__c ,
&quot;\\d{5}(-\\d{4})?&quot;)))</errorConditionFormula>
        <errorDisplayField>Zip_Postal_Code__c</errorDisplayField>
        <errorMessage>Please enter a valid Zip Postal Code.Zip code must be in 99999 or 99999-9999 format.</errorMessage>
    </validationRules>
</CustomObject>